# RealTimeWeatherPipeline

./: LICENSE  README.md  pyproject.toml
config/: docker-compose.yml
scripts/ingestion/: consumer_main.py  producer_main.py
